<resources>
    <string name="app_name">chatbot</string>
    <string name="facebook_app_id">501445821914161</string>
    <string name="fb_login_protocol_scheme">fb501445821914161</string>
    <string name="facebook_client_token">9a9b4b8967cfe8e1d9645b71b8bfa2ad</string>
    <string name="internet_error">No internet connection. Please try again</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="GPSIsNotEnabled">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="text_settings">Setting</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_report">Report</string>
    <string name="text_report_msg">This message will be forwarded to spectyrghost. This contact will be notified.</string>
    <string name="chat_bot">Chat Bot</string>
    <string name="great">Great</string>
    <string name="wonderful">Wonderful</string>
    <string name="intro_text_one">How is your day going? Let’s chat with me!</string>
    <string name="intro_text_two">Ask me anything you want to know I will help you.</string>
    <string name="premium_hasn_t_been_activated_yet_tap_to_upgrade">Premium hasn’t been activated yet.\nTap to upgrade.</string>
    <string name="better_method_of_creating_communicating"><![CDATA[Better method of\ncreating & communicating]]></string>
    <string name="generate_image">Generate Image</string>
    <string name="turn_prompts_into_art_using_ai">Turn prompts into art using AI</string>
    <string name="get_started">Get started</string>
    <string name="topic_description">Ask questions any specific topic and\nget  answers.</string>
    <string name="chat_with_ai">Ask questions and get answers.</string>
    <string name="chat_with_ai_title">Chat with Ai</string>
    <string name="topic">Topic</string>
    <string name="general">General</string>
    <string name="home">Home</string>
    <string name="support">Support</string>
    <string name="help">Help</string>
    <string name="get_full_access">Get Full Access</string>
    <string name="about">About</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="notification">Notification</string>
    <string name="version">Version :</string>
    <string name="create_art">Create Art</string>
    <string name="enter_prompt">Enter prompt</string>
    <string name="an_old_elephant_flying_in_the_sky">An old elephant flying in the sky</string>
    <string name="an_astronaut_riding_a_horse">An astronaut riding a horse</string>
    <string name="choose_an_art_style">Choose an art style</string>
    <string name="the_sunset_on_beautiful_tropical_island">The sunset on beautiful tropical island</string>
    <string name="a_flutter_of_koi_fish">A flutter of koi fish</string>
    <string name="a_pale_gloomy_wolfs_face">A pale gloomy wolf\'s face</string>
    <string name="ghosts_playing_on_a_beach">Ghosts playing on a beach</string>
    <string name="no_data_found">No Any Prompt Found</string>
    <string name="images_left"> Images left</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="let_the_genic_out_of_the_bottle">Let the genic out of the bottle!</string>
    <string name="secured_with_itunes_cancel_anytime">Secured with iTunes. Cancel anytime</string>
    <string name="weekly_access">WEEKLY ACCESS</string>
    <string name="_299">₹ 299.00</string>
    <string name="monthly_access">MONTHLY ACCESS</string>
    <string name="_999">₹ 999.00</string>
    <string name="per_year_cancel_anytime">Per Year, Cancel anytime</string>
    <string name="get_access_to">Get Access to</string>
    <string name="no_limitation_for_ask_question_to_ai_chat">No limitation for ask question to AI chat</string>
    <string name="_10_image_generate_in_one_day">10 Image generate in one day</string>
    <string name="no_ads">No Ads</string>
    <string name="all_functions">All Functions</string>
    <string name="cancel_anytime">Cancel Anytime</string>
    <string name="payment_will_be_charged_to_itunes_account_at">\t•\tPayment will be charged to iTunes Account at</string>
    <string name="categories_chat">Categories chat</string>
    <string name="write">Write</string>
    <string name="plan">Plan</string>
    <string name="ai_code">AI Code</string>
    <string name="interview">Interview</string>
    <string name="summary">Summary</string>
    <string name="mood_journal">Mood Journal</string>
    <string name="word_to_emoji">Word to Emoji</string>
    <string name="grammar_correct">Grammar Correct</string>
    <string name="translator">Translator</string>
    <string name="enter_topic">Enter topic</string>
    <string name="composition">Composition</string>
    <string name="start_typing">Start typing</string>
    <string name="_0_1000">0/1000</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="submit">Submit</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="select_length">Select Length</string>
    <string name="copy">Copy</string>
    <string name="listen">Listen</string>
    <string name="textExample">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular..</string>
    <string name="copied_to_clipboard">Copied</string>
    <string name="language_not_supported">The Language specified is not supported!</string>
    <string name="initialization_failed">Initialization Failed!</string>
    <string name="share_image">Share image using</string>
    <string name="chat">Chat</string>
    <string name="write_message">Write message…</string>
    <string name="send">Send</string>
    <string name="please_enter_message">Please Enter Message</string>
    <string name="speak_to_text">Speak to text</string>
    <string name="what_can_i_help_you">What can i help You ?</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">You need to give permission</string>
    <string name="image_download_success">Image downloaded successfully</string>
    <string name="send_to">Send to</string>
    <string name="no_app_found_for_open_pdf_files">No application has been found to open PDF files.</string>
    <string name="pdf_downloaded_successfully">PDF downloaded successfully</string>
    <string name="share_pdf">Share PDF</string>
    <string name="max_count">/1000</string>
    <string name="server_error">Something went to wrong. Please try after sometimes</string>
    <string name="record_added_success">Record added successfully</string>
    <string name="title">Title</string>
    <string name="text_press_back_to_exit">Press again to Exit…</string>
    <string name="app_key">ca-app-pub-3940256099942544~3347511713</string>
    <string name="retry">RETRY</string>
    <string name="you_give_me_one_long_composition_in">\"You give me one Long composition in \"</string>
    <string name="human">Human:</string>
    <string name="ai">AI:</string>
    <string name="choose_any_one">choose any one</string>
    <string name="contact_us">Contact us for help</string>
    <string name="i_need_help_for_the_app">I need some help for the AiChat App</string>
    <string name="send_email_to">send email</string>
    <string name="there_are_no_email_installed">There are no email clients installed.</string>
    <string name="stop">stop</string>
    <string name="hi_there">Hi there! </string>
    <string name="text_davinci">text-davinci-003</string>
    <string name="image_size">512x512</string>
    <string name="you_have_purchased_pro_plan">Great ! you have successfully purchased a pro plan</string>
    <string name="successfully_buy_pro_version">Success! You purchased the pro version.</string>
    <string name="pro_version_restore_successfully">Your pro version was restored successfully.</string>
    <string name="language_on_my_potic_and_my_topic_is">Language on my potic and my topic is : \"</string>
    <string name="scan_anything_and_get_answer">Scan anything and get answers.</string>
    <string name="scan_math_solving">Scan / Math Solving</string>
    <string name="chat_bot_has_sent_you_a_premium_gift">Chat bot has sent you a \nPremium gift.</string>
    <string name="tap_to_receive">Tap to receive</string>
    <string name="you_have">• You have</string>
    <string name="get_premium"><u>Get premium</u></string>
    <string name="no_limitation_on_scan_math_solving">No limitation on scan/math solving</string>
    <string name="best_offer">BEST OFFER</string>
    <string name="popular">POPULAR</string>
    <string name="_continue">Continue</string>
    <string name="restore">Restore</string>
    <string name="small">Small</string>
    <string name="stop_listen">Stop Listen</string>
    <string name="free_messages_left">messages left.</string>
    <string name="scan_and_math_solving">Scan &amp; Solve</string>
    <string name="solution">Solution</string>
    <string name="answer">Answer:</string>
    <string name="copy_answer">Copy answer</string>
    <string name="scan_new_question">Scan new question</string>
    <string name="copied">Copied</string>
    <string name="user">user</string>
    <string name="params_model">gpt-3.5-turbo</string>
    <string name="do_your_best_in_to_give_answer">"Do your best in to give answer "</string>
    <string name="role_system">system</string>
    <string name="sentence">"sentence."</string>
    <string name="content_you_will_be_provided">"You will be provided with text, and your task is giving answer. Do not use any regular text. Do your best with your answer in "</string>
    <string name="plan_sub_title">"You will be provided with a text, and your task is to create Plan (detail, time and cost)."</string>
    <string name="ai_code_sub_title">"You will be provided with developing all types code, and your task is to provide code for efficiency improvements."</string>
    <string name="interview_sub_title">"You will be provided with a text, and your task is create a list of answer according to related interview topic question for giving an interview topic."</string>
    <string name="word_to_emoji_sub_title">"ou will be provided with text, and your task is to translate it into emojis. Do not use any regular text. Do your best with emojis only"</string>
    <string name="grammar_correct_sub_title">"You will be provided with statements, and your task is to convert them to standard"</string>
    <string name="translator_sub_title">"You will be provided with a sentence in English, and your task is to translate it into"</string>
</resources>