<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.hashmob.aichat.main.home.ui.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerDrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_blur_bg"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBlur"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvChatBot"
            style="@style/tv16WhiteBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/chat_bot"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintBottom_toTopOf="@id/scrollView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCloseDrawer"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:src="@drawable/ic_close_drawer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:elevation="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/tvChatBot">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvGeneral"
                    style="@style/tv16WhiteSemiBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/general"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvHome"
                    style="@style/tv14WhiteMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:drawableStart="@drawable/ic_home"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="start|center"
                    android:text="@string/home"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvGeneral"
                    app:layout_constraintTop_toBottomOf="@id/tvGeneral" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSupport"
                    style="@style/tv16WhiteSemiBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_23sdp"
                    android:text="@string/support"
                    app:layout_constraintStart_toStartOf="@id/tvGeneral"
                    app:layout_constraintTop_toBottomOf="@id/tvHome" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvHelp"
                    style="@style/tv14WhiteMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:drawableStart="@drawable/ic_help"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="start|center"
                    android:text="@string/help"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvGeneral"
                    app:layout_constraintTop_toBottomOf="@id/tvSupport" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRestorePurchases"
                    style="@style/tv14WhiteMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:drawableStart="@drawable/ic_restore_purchase"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="start|center"
                    android:text="@string/get_full_access"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvGeneral"
                    app:layout_constraintTop_toBottomOf="@id/tvHelp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAbout"
                    style="@style/tv16WhiteSemiBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_23sdp"
                    android:text="@string/about"
                    app:layout_constraintStart_toStartOf="@id/tvGeneral"
                    app:layout_constraintTop_toBottomOf="@id/tvRestorePurchases" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRateUs"
                    style="@style/tv14WhiteMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:drawableStart="@drawable/ic_rate_us"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="start|center"
                    android:text="@string/rate_us"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvGeneral"
                    app:layout_constraintTop_toBottomOf="@id/tvAbout" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvShare"
                    style="@style/tv14WhiteMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:drawableStart="@drawable/ic_share"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="start|center"
                    android:text="@string/share_with_friends"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvGeneral"
                    app:layout_constraintTop_toBottomOf="@id/tvRateUs" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTerms"
                    style="@style/tv14WhiteMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:drawableStart="@drawable/ic_terms"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="start|center"
                    android:text="@string/terms_of_use"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvGeneral"
                    app:layout_constraintTop_toBottomOf="@id/tvShare" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPrivacy"
                    style="@style/tv14WhiteMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:drawableStart="@drawable/ic_privacy"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="start|center"
                    android:text="@string/privacy_policy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvGeneral"
                    app:layout_constraintTop_toBottomOf="@id/tvTerms" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvVersion"
                    style="@style/tv14WhiteMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvPrivacy" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>